@@ -2,30 +2,30 @@ package org.peakaboo.filter.plugins.background;
 
 import java.io.File;
 import java.nio.file.Path;
-import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 import java.util.logging.Level;
 
 import org.peakaboo.app.PeakabooLog;
 import org.peakaboo.dataset.DataSet;
 import org.peakaboo.dataset.StandardDataSet;
+import org.peakaboo.dataset.io.PathDataInputAdapter;
 import org.peakaboo.dataset.source.model.DataSource;
+import org.peakaboo.dataset.source.model.DataSource.DataSourceContext;
 import org.peakaboo.dataset.source.model.components.fileformat.FileFormat;
-import org.peakaboo.dataset.source.model.datafile.PathDataFile;
 import org.peakaboo.dataset.source.plugin.plugins.PlainText;
 import org.peakaboo.filter.model.AbstractBackgroundFilter;
-import org.peakaboo.filter.model.FilterContext;
 import org.peakaboo.framework.autodialog.model.Parameter;
 import org.peakaboo.framework.autodialog.model.style.editors.FileNameStyle;
-import org.peakaboo.framework.cyclops.spectrum.ISpectrum;
-import org.peakaboo.framework.cyclops.spectrum.ReadOnlySpectrum;
+import org.peakaboo.framework.cyclops.spectrum.ArraySpectrum;
+import org.peakaboo.framework.cyclops.spectrum.SpectrumView;
 import org.peakaboo.framework.cyclops.spectrum.SpectrumCalculations;
 
 public class SpectrumBackgroundFilter extends AbstractBackgroundFilter {
 
 	private Parameter<String> spectrumFile;
 	private String loadedFile = null;
-	private ReadOnlySpectrum spectrum;
+	private SpectrumView spectrum;
 		
 	@Override
 	public String getFilterName() {
@@ -60,14 +60,14 @@ public class SpectrumBackgroundFilter extends AbstractBackgroundFilter {
 	}
 
 	@Override
-	public String pluginUUID() {
+	public String getFilterUUID() {
 		return "33ed30e7-65fb-4972-80e8-95dce2811b05";
 	}
 
 	@Override
-	protected ReadOnlySpectrum getBackground(ReadOnlySpectrum data, Optional<FilterContext> ctx, int percent) {
+	protected SpectrumView getBackground(SpectrumView data, Optional<FilterContext> ctx, int percent) {
 		if (loadedFile == null || spectrum == null) {
-			return new ISpectrum(data.size());
+			return new ArraySpectrum(data.size());
 		} else {
 			//load it lazily on first use
 			loadBackground(data);
@@ -75,7 +75,7 @@ public class SpectrumBackgroundFilter extends AbstractBackgroundFilter {
 		}
 	}
 	
-	private synchronized void loadBackground(ReadOnlySpectrum data) {
+	private synchronized void loadBackground(SpectrumView data) {
 		
 		if (loadedFile == null) { return; }
 		if (loadedFile.equals(spectrumFile.getValue())) { return; }
@@ -83,7 +83,7 @@ public class SpectrumBackgroundFilter extends AbstractBackgroundFilter {
 			
 		//If they haven't given a file yet
 		if (spectrumFile.getValue().length() == 0) {
-			spectrum = new ISpectrum(data.size());
+			spectrum = new ArraySpectrum(data.size());
 			return;
 		}
 		
@@ -91,12 +91,13 @@ public class SpectrumBackgroundFilter extends AbstractBackgroundFilter {
 			//try loading the file
 			DataSource source = new PlainText();
 			Path path = new File(spectrumFile.getValue()).toPath();
-			source.read(Collections.singletonList(new PathDataFile(path)));
+			var ctx = new DataSourceContext(List.of(new PathDataInputAdapter(path)));
+			source.read(ctx);
 			DataSet bgDataSet = new StandardDataSet(source);
 			spectrum = bgDataSet.getAnalysis().averagePlot();
 		} catch (Exception e) {
 			PeakabooLog.get().log(Level.SEVERE, "Failed to load background from dataset", e);
-			spectrum = new ISpectrum(data.size());
+			spectrum = new ArraySpectrum(data.size());
 		}
 		//now that we've loaded it (or failed), set the loadedFile so we don't constantly re-load it
 		loadedFile = spectrumFile.getValue();
